src/objects/SFDC_Project__c.object
<CustomObject>
    <description>Controls the categorization of the Issues (in the Issues object). The project plan for the Business Taxonomy, for example, is driven from a record in this object.</description>
    <fields>
        <fullName>Actual_Completion_Date__c</fullName>
        <label>Actual Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Projected_Completion_Date__c</fullName>
        <label>Projected Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>SFDC Development</label>
    <nameField>
        <label>SFDC Development Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SFDC Development</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>